Minor language updates + theme translations Currently there is an issue with the UI not updating when changing languages

--- a/HedgeModManager/Languages/en-AU.xaml
+++ b/HedgeModManager/Languages/en-AU.xaml
@@ -180,4 +180,9 @@
     <system:String x:Key="ModUpdatesChangelog">Changelog</system:String>
     <system:String x:Key="ModUpdatesTitle"    >Mod Updates</system:String>
 
+    <!-- Themes -->
+    <system:String x:Key="ThemeDark">Dark</system:String>
+    <system:String x:Key="ThemeOLED">OLED</system:String>
+    <system:String x:Key="ThemeLight">Light</system:String>
+
 </ResourceDictionary>
