--- a/HedgeModManager/HedgeApp.xaml
+++ b/HedgeModManager/HedgeApp.xaml
@@ -314,7 +314,9 @@
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
                                 <TabPanel IsItemsHost="True"/>
-                                <Border BorderThickness="0,2,0,0" BorderBrush="{DynamicResource HMM.Window.AccentBrush2}" Grid.Row="1">
+                                <Border BorderThickness="0,2,0,0" 
+                                        BorderBrush="{DynamicResource HMM.Window.AccentBrush2}" 
+                                        Grid.Row="1">
                                     <Grid Margin="0,5,0,0">
                                         <ContentPresenter x:Name="PART_Presenter" ContentSource="SelectedContent" HorizontalAlignment="Stretch"/>
                                         <Rectangle x:Name="PART_TempArea"/>
@@ -394,7 +396,8 @@
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type TabItem}">
                             <Border BorderBrush="Transparent" Width="{TemplateBinding Width}" 
-                                    Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}">
+                                    Background="{TemplateBinding Background}" Padding="{TemplateBinding Padding}"
+                                    CornerRadius="4,4,0,0">
                                 <TextBlock Text="{TemplateBinding Header}" Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center"/>
                             </Border>
                             <ControlTemplate.Triggers>
