Added code searching + fixed loaders.ini + credits

--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -35,8 +35,8 @@
                     <Label Content="Sajid"/>
                     <Label Content="Radfordhound"/>
                     <Label Content="Korama"/>
-                    <Label Content="MainMemory"/>
                     <Label Content="Skyth"/>
+                    <Label Content="MainMemory"/>
                     <Label Content="PTKickass"/>
                     <Label Content="M&amp;M"/>
                     <Label Content="Hyper"/>
@@ -47,8 +47,8 @@
                     <Label Content="Writing 7.0"/>
                     <Label Content="Base Design"/>
                     <Label Content="CPKREDIR"/>
+                    <Label Content="Adding SCU support with RML"/>
                     <Label Content="mod-loader-common"/>
-                    <Label Content="Contributing to Forces Mod Loader"/>
                     <Label Content="Contributing to the project"/>
                     <Label Content="Contributing to the project"/>
                     <Label Content="Contributing to the project"/>
