--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -36,7 +36,6 @@
                     <Label Content="Radfordhound"/>
                     <Label Content="Korama"/>
                     <Label Content="Skyth"/>
-                    <Label Content="MainMemory"/>
                     <Label Content="PTKickass"/>
                     <Label Content="M&amp;M"/>
                     <Label Content="Hyper"/>
@@ -47,8 +46,7 @@
                     <Label Content="Writing 7.0"/>
                     <Label Content="Base Design"/>
                     <Label Content="CPKREDIR"/>
-                    <Label Content="Adding SCU support with RML"/>
-                    <Label Content="mod-loader-common"/>
+                    <Label Content="RainbowModLoader"/>
                     <Label Content="Contributing to the project"/>
                     <Label Content="Contributing to the project"/>
                     <Label Content="Contributing to the project"/>
