--- a/HedgeModManager/Languages/en-US.xaml
+++ b/HedgeModManager/Languages/en-US.xaml
@@ -4,19 +4,20 @@
   xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <!-- Common UI Strings -->
-    <system:String x:Key="CommonUIClose"  >Close</system:String>
-    <system:String x:Key="CommonUIOK"     >OK</system:String>
-    <system:String x:Key="CommonUICancel" >Cancel</system:String>
-    <system:String x:Key="CommonUIYes"    >Yes</system:String>
-    <system:String x:Key="CommonUIBlocked">Blocked</system:String>
-    <system:String x:Key="CommonUINo"     >No</system:String>
-    <system:String x:Key="CommonUIRetry"  >Retry</system:String>
-    <system:String x:Key="CommonUIUpdate" >Update</system:String>
-    <system:String x:Key="CommonUIDelete" >Delete</system:String>
-    <system:String x:Key="CommonUINone"   >None</system:String>
-    <system:String x:Key="CommonUIIgnore" >Ignore</system:String>
-    <system:String x:Key="CommonUIWarning">WARNING</system:String>
-    <system:String x:Key="CommonUIError"  >ERROR</system:String>
+    <system:String x:Key="CommonUIClose"   >Close</system:String>
+    <system:String x:Key="CommonUIOK"      >OK</system:String>
+    <system:String x:Key="CommonUICancel"  >Cancel</system:String>
+    <system:String x:Key="CommonUIYes"     >Yes</system:String>
+    <system:String x:Key="CommonUIBlocked" >Blocked</system:String>
+    <system:String x:Key="CommonUINo"      >No</system:String>
+    <system:String x:Key="CommonUIRetry"   >Retry</system:String>
+    <system:String x:Key="CommonUIUpdate"  >Update</system:String>
+    <system:String x:Key="CommonUIDownload">Download</system:String>
+    <system:String x:Key="CommonUIDelete"  >Delete</system:String>
+    <system:String x:Key="CommonUINone"    >None</system:String>
+    <system:String x:Key="CommonUIIgnore"  >Ignore</system:String>
+    <system:String x:Key="CommonUIWarning" >WARNING</system:String>
+    <system:String x:Key="CommonUIError"   >ERROR</system:String>
 
     <!-- Main UI Strings -->
     <system:String x:Key="MainUIMods"          >Mods</system:String>
@@ -94,6 +95,8 @@
     <system:String x:Key="MainUISaveFileRedirectionDisabled" xml:space="preserve">One or more enabled mods require save file redirection to work properly. Enable this feature?&#x0a;Click no only if you know what you are doing.</system:String>
     <system:String x:Key="MainUIMissingDependsHeader" xml:space="preserve">Failed to resolve mod dependencies</system:String>
     <system:String x:Key="MainUIMissingDepends" xml:space="preserve"      >The following mods have missing dependencies:</system:String>
+    <system:String x:Key="MainUIMissingDependsResolve">Resolve GB Mods</system:String>
+    <system:String x:Key="MainUIResolvable" xml:space="preserve">One or more dependencies can be automatically resolved&#x0a;from GameBanana by clicking "Resolve GB Mods".</system:String>
 
     <!-- OptionsWindow UI Strings -->
     <system:String x:Key="OptionsWindowUIError"      >Please select an option!</system:String>
@@ -179,8 +182,10 @@
     <system:String x:Key="ModDownloaderNoGameMes">Hedge Mod Manager was unable to find an installation of {0}</system:String>
 
     <!-- Mod Updates Window Strings -->
-    <system:String x:Key="ModUpdatesChangelog">Changelog</system:String>
-    <system:String x:Key="ModUpdatesTitle"    >Mod Updates</system:String>
+    <system:String x:Key="ModUpdatesChangelog"    >Changelog</system:String>
+    <system:String x:Key="ModDownloadsDescription">Description</system:String>
+    <system:String x:Key="ModUpdatesTitle"        >Mod Updates</system:String>
+    <system:String x:Key="ModDownloadsTitle"      >Mod Downloads</system:String>
 
     <!-- Themes -->
     <system:String x:Key="ThemeDark">Dark</system:String>
